# demo-ecommerce-api

./: .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0f0eb78c4215_add_orders_table.py  525bfe78fb8e_add_products_table.py
src/api/models/: order.py  pagination_metadata.py  product.py
src/api/routes/: orders.py  products.py
src/config/: config_loader.py
src/db/: base.py
src/db/crud/: order_crud.py  product_crud.py
src/db/models/: database_models.py
src/utils/: exception_handlers.py  logger.py
tests/api/: test_orders.py  test_products.py
